--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h1>My First Cloud Deployment</h1>
 <h2>Hello, my name is Gian Carlo Garcellano</h2>
-<img src="https://static.wikia.nocookie.net/neoencyclopedia/images/c/cb/Monkey_D_Luffy.png/revision/latest?cb=20130114040042" width="200" />
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRjyunpclfLLP_ej_iEf6D8UOBhWgqukZxoIA&s" width="200" />
+
 <p>This is my first deployed website!</p>
